Fix DownloadManagerTestCase flakiness.

On iOS 12 URLSession:dataTask:didReceiveData: delegate method can be
called when task is in NSURLSessionTaskStateCompleted state. This
resulted in extra URLFetcherResponseWriter::Finish call (one from
didReceiveData: and one from didCompleteWithError:).
URLFetcherResponseWriter::Finish DCHECKs if Finish is called twice, so
the test was flaky.

This CL changes DownloadTaskImpl to only call
URLFetcherResponseWriter::Finish from didCompleteWithError:.

Bug: 873204
Change-Id: Ie6b8757e2c5c5d35da088fd108d92ee3ed13244d
Reviewed-on: https://chromium-review.googlesource.com/c/1354233
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612249}
Former-commit-id: eabc228b25f1ca123bbb13b6c5bb9a6c68b8a9f6